<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_label">Recipe Name</string>
    <string name="step_label">Next Step</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredient_quantity">Quantity</string>
    <string name="ingredient_measure">Measure</string>
    <string name="ingredients">Ingredients</string>
    <string name="step_description">Step description</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipes_title_label">Recipes</string>
    <string name="widget_item_label">Single Ingredient</string>
    <string name="next_step">Next</string>
    <string name="exo_player_imgview">Exo imgview</string>
    <string name="todo">TODO</string>
    <string name="play_player_button">Play</string>
    <string name="pause_player_button">Stop</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="image_button_play">Play</string>
    <string name="image_button_pause">Pause</string>
    <string name="image_button_fullscreen">Full screen</string>
    <string name="previous_step">Previous</string>
    <string name="home">Home</string>
    <string name="cakeimg">string/image_description</string>
    <string name="widget_chosen_position">widgetChosenPostion</string>
    <string name="change_configuration">Change</string>
    <string name="toast_msg">Nice cake image instead of video</string>
</resources>
