<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/recipes_title_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/widget_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/change_configuration"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/widget_list"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/appwidget_text"
        tools:text="@string/appwidget_text"
        tools:listitem="@layout/cake_widget_list_item"/>

</LinearLayout>