<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_detailed_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UI.StepDetailedActivity">

    <ImageView
        android:id="@+id/cake_image"
        android:layout_width="0dp"
        android:layout_height="247dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cakeimg" />

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/step_details_player"
            android:layout_width="0dp"
            android:layout_height="247dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

        <TextView
            android:id="@+id/step_details_description"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:paddingTop="10dp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_details_player"
            tools:text="@string/step_description" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/step_details_button_previous"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/previous_step"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_details_description"
            app:layout_goneMarginBottom="16dp" />

        <Button
            android:id="@+id/step_details_button_next"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/next_step"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/step_details_description"
            app:layout_constraintVertical_bias="0.0"
            app:layout_goneMarginBottom="16dp" />


</android.support.constraint.ConstraintLayout>
